After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708128 - listbox keynav gets stuck at insensitive rows
listbox keynav gets stuck at insensitive rows
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-09-15 22:25 UTC by Kalev Lember
Modified: 2013-09-16 11:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
listbox: Jump over insensitive rows with keynav (5.20 KB, patch)
2013-09-15 22:35 UTC, Kalev Lember
committed Details | Review

Description Kalev Lember 2013-09-15 22:25:31 UTC
When a listbox row is insensitive, keynav should jump over the insensitive row (as insensitive widgets can't be focused) and continue at the next sensitive one.

Currently however it's not working like that and keynav just stops at the previous row.
Comment 1 Kalev Lember 2013-09-15 22:35:55 UTC
Created attachment 254994 [details] [review]
listbox: Jump over insensitive rows with keynav
Comment 2 Kalev Lember 2013-09-16 11:47:04 UTC
13:37 < kalev> alex: hey, I filed a listbox patch last night, if you have time for reviews
13:37 < kalev> alex: https://bugzilla.gnome.org/show_bug.cgi?id=708128
13:37 < Services> Bug 708128: normal, Normal, ---, gtk-bugs, UNCONFIRMED, listbox keynav gets stuck at insensitive rows
13:37 < kalev> this makes the keynav work in the control center date & time panel
13:42 < alex> kalev: looks good, please commit

Attachment 254994 [details] pushed as 5f62785 - listbox: Jump over insensitive rows with keynav