listbox: Jump over insensitive rows with keynav

https://bugzilla.gnome.org/show_bug.cgi?id=708128